--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <p>change made by Bazlur in main branch</p>
 <p>from feature</p>
 
-<p></p>
+<p>Making Remote Changes</p>
 <!-- deleted a line here <p>line added from feature branch</p> -->
 </body>
 </html>
