--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <p>from feature</p>
 
 <p></p>
+<p>Making Local Changes</p>
 <!-- deleted a line here <p>line added from feature branch</p> -->
 </body>
 </html>
